update references demo  🏈